# ABSURD

./: README.md
code/: README.md
code/apps/: README.md  acas.c  ann.c  canny.c  img_scaling.c  jpeg_compress.cpp  knn.cpp  latnav.c  tcas.c
code/basic/: array_stats.c  binary_search.c  bsqrt.c  eq_root.c  exp_int.c  fibonacci.c  matrix_nn.c  mc_integral.c  multi_search.c  select_nmax.c  unstruct.c
code/include/: dev_classes.h  simple_random.h  user.h
code/kernels/: README.md  avg_filter.c  avg_filter_RGB.cpp  binary_tree_sort.c  biquad.c  bogo_sort.c  bubble_sort.c  crc_32.c  dct.c  dilate.c  erode.c  fft.c  fir_avg.c  gauss_filter.c  gauss_filter_RGB.cpp  insertion_sort.c  knn.cpp  lu_dec.c  matrix_det.c  matrix_inv.c  matrix_mult.c  md5.c  parallel_merge_sort.cpp  quick_sort  quick_sort.c  zo_adamm.cpp
code/synthetic/: dist_exp.cpp  dist_gamma.cpp  dist_normal.cpp  dist_uniform.cpp
code/test/: CMakeLists.txt  main.c  main.c.in
code/test/STM32F7/: CMakeLists.txt
code/test/STM32F7/Core/Inc/: main.h
code/test/STM32F7/Core/Src/: stm32_main.c.in  stm32f7xx_hal_msp.c
code/util/: simple_random.c
data/: README.md  plot_pwcet.py  run_pwcet_estimates.sh  run_stats.py
data/pwcet/nucleo-f746zg/class_a/: pwcet_acas.txt  pwcet_ann.txt  pwcet_array_stats.txt  pwcet_avg_filter.txt  pwcet_binary_search.txt  pwcet_binary_tree_sort.txt  pwcet_bogo_sort.txt  pwcet_bsqrt.txt  pwcet_bubble_sort.txt  pwcet_canny.txt  pwcet_crc_32.txt  pwcet_dct.txt  pwcet_dilate.txt  pwcet_dist_exp.txt  pwcet_dist_gamma.txt  pwcet_dist_normal.txt  pwcet_eq_root.txt  pwcet_erode.txt  pwcet_exp_int.txt  pwcet_fft.txt  pwcet_fibonacci.txt  pwcet_fir_avg.txt  pwcet_gauss_filter.txt  pwcet_img_scaling.txt  pwcet_insertion_sort.txt  pwcet_jpeg_compress.txt  pwcet_knn.txt  pwcet_latnav.txt  pwcet_lu_dec.txt  pwcet_matrix_det.txt  pwcet_matrix_inv.txt  pwcet_matrix_mult.txt  pwcet_matrix_nn.txt  pwcet_mc_integral.txt  pwcet_md5.txt  pwcet_multi_search.txt  pwcet_quick_sort.txt  pwcet_select_nmax.txt  pwcet_unstruct.txt  pwcet_zo_adamm.txt
data/pwcet/nucleo-f746zg/class_b/: pwcet_acas.txt  pwcet_ann.txt  pwcet_array_stats.txt  pwcet_avg_filter.txt  pwcet_binary_search.txt  pwcet_binary_tree_sort.txt  pwcet_biquad.txt  pwcet_bogo_sort.txt  pwcet_bsqrt.txt  pwcet_bubble_sort.txt  pwcet_canny.txt  pwcet_crc_32.txt  pwcet_dct.txt  pwcet_dilate.txt  pwcet_dist_exp.txt  pwcet_dist_gamma.txt  pwcet_eq_root.txt  pwcet_erode.txt  pwcet_exp_int.txt  pwcet_fft.txt  pwcet_fibonacci.txt  pwcet_fir_avg.txt  pwcet_gauss_filter.txt  pwcet_img_scaling.txt  pwcet_insertion_sort.txt  pwcet_jpeg_compress.txt  pwcet_knn.txt  pwcet_latnav.txt  pwcet_lu_dec.txt  pwcet_matrix_det.txt  pwcet_matrix_inv.txt  pwcet_matrix_mult.txt  pwcet_matrix_nn.txt  pwcet_mc_integral.txt  pwcet_md5.txt  pwcet_multi_search.txt  pwcet_quick_sort.txt  pwcet_select_nmax.txt  pwcet_unstruct.txt  pwcet_zo_adamm.txt
data/pwcet/odroid-h2/class_a/: pwcet_acas.txt  pwcet_ann.txt  pwcet_array_stats.txt  pwcet_avg_filter.txt  pwcet_avg_filter_RGB.txt  pwcet_binary_search.txt  pwcet_binary_tree_sort.txt  pwcet_biquad.txt  pwcet_bogo_sort.txt  pwcet_bsqrt.txt  pwcet_bubble_sort.txt  pwcet_canny.txt  pwcet_crc_32.txt  pwcet_dct.txt  pwcet_dilate.txt  pwcet_dist_exp.txt  pwcet_dist_gamma.txt  pwcet_dist_normal.txt  pwcet_dist_uniform.txt  pwcet_eq_root.txt  pwcet_erode.txt  pwcet_exp_int.txt  pwcet_fft.txt  pwcet_fibonacci.txt  pwcet_fir_avg.txt  pwcet_gauss_filter.txt  pwcet_gauss_filter_RGB.txt  pwcet_img_scaling.txt  pwcet_insertion_sort.txt  pwcet_jpeg_compress.txt  pwcet_knn.txt  pwcet_latnav.txt  pwcet_lu_dec.txt  pwcet_matrix_det.txt  pwcet_matrix_inv.txt  pwcet_matrix_mult.txt  pwcet_matrix_nn.txt  pwcet_mc_integral.txt  pwcet_md5.txt  pwcet_multi_search.txt  (+4 more)
data/pwcet/odroid-h2/class_b/: pwcet_acas.txt  pwcet_ann.txt  pwcet_array_stats.txt  pwcet_avg_filter.txt  pwcet_avg_filter_RGB.txt  pwcet_binary_search.txt  pwcet_binary_tree_sort.txt  pwcet_biquad.txt  pwcet_bogo_sort.txt  pwcet_bsqrt.txt  pwcet_bubble_sort.txt  pwcet_canny.txt  pwcet_crc_32.txt  pwcet_dct.txt  pwcet_dilate.txt  pwcet_dist_exp.txt  pwcet_dist_gamma.txt  pwcet_dist_normal.txt  pwcet_dist_uniform.txt  pwcet_eq_root.txt  pwcet_erode.txt  pwcet_exp_int.txt  pwcet_fft.txt  pwcet_fibonacci.txt  pwcet_fir_avg.txt  pwcet_gauss_filter.txt  pwcet_gauss_filter_RGB.txt  pwcet_img_scaling.txt  pwcet_insertion_sort.txt  pwcet_jpeg_compress.txt  pwcet_knn.txt  pwcet_latnav.txt  pwcet_lu_dec.txt  pwcet_matrix_det.txt  pwcet_matrix_inv.txt  pwcet_matrix_mult.txt  pwcet_matrix_nn.txt  pwcet_mc_integral.txt  pwcet_md5.txt  pwcet_multi_search.txt  (+4 more)
data/pwcet/odroid-h2/class_c/: pwcet_acas.txt  pwcet_ann.txt  pwcet_array_stats.txt  pwcet_avg_filter.txt  pwcet_avg_filter_RGB.txt  pwcet_binary_search.txt  pwcet_binary_tree_sort.txt  pwcet_biquad.txt  pwcet_bogo_sort.txt  pwcet_bsqrt.txt  pwcet_bubble_sort.txt  pwcet_canny.txt  pwcet_crc_32.txt  pwcet_dct.txt  pwcet_dilate.txt  pwcet_dist_exp.txt  pwcet_dist_gamma.txt  pwcet_dist_normal.txt  pwcet_dist_uniform.txt  pwcet_eq_root.txt  pwcet_erode.txt  pwcet_exp_int.txt  pwcet_fft.txt  pwcet_fibonacci.txt  pwcet_fir_avg.txt  pwcet_gauss_filter.txt  pwcet_gauss_filter_RGB.txt  pwcet_img_scaling.txt  pwcet_insertion_sort.txt  pwcet_jpeg_compress.txt  pwcet_knn.txt  pwcet_latnav.txt  pwcet_lu_dec.txt  pwcet_matrix_det.txt  pwcet_matrix_inv.txt  pwcet_matrix_mult.txt  pwcet_matrix_nn.txt  pwcet_mc_integral.txt  pwcet_md5.txt  pwcet_multi_search.txt  (+4 more)
data/pwcet/odroid-h2/class_d/: pwcet_acas.txt  pwcet_ann.txt  pwcet_array_stats.txt  pwcet_avg_filter.txt  pwcet_avg_filter_RGB.txt  pwcet_binary_search.txt  pwcet_binary_tree_sort.txt  pwcet_biquad.txt  pwcet_bogo_sort.txt  pwcet_bsqrt.txt  pwcet_bubble_sort.txt  pwcet_canny.txt  pwcet_crc_32.txt  pwcet_dct.txt  pwcet_dilate.txt  pwcet_dist_exp.txt  pwcet_dist_gamma.txt  pwcet_dist_normal.txt  pwcet_dist_uniform.txt  pwcet_eq_root.txt  pwcet_erode.txt  pwcet_exp_int.txt  pwcet_fft.txt  pwcet_fibonacci.txt  pwcet_fir_avg.txt  pwcet_knn.txt  (+18 more)
generator/: README.md  test.py
generator/absurd_gen/: generator.py
(+348 files in other folders)
